--- a/src/interface/templates/base.html
+++ b/src/interface/templates/base.html
@@ -31,6 +31,7 @@
     <script src="{% static 'jquery/jquery.history.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.scrollto.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.fixer.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery.qrcode.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
     <script src="{% static 'base/js/scripts.js' %}"></script>
 
