--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -163,8 +163,8 @@
                                         <div id="already{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                                             <ul>
                                                 <li style="width: 24%" align="center">
-                                                    <a class="fake-link" href="{% url 'questionnaire' activity.id %}" target="_blank" >
-                                                        <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 查看
+                                                    <a class="fake-link" href="javascript:stop_act('{{activity.id}}', '{% url 'api/stop_act' %}', '#dashboard-item')">
+                                                        <i class="fa fa-pause fa-fw fa-2x" aria-hidden="true"></i>停止
                                                     </a>
                                                 </li>
                                                 <li style="width: 24%" align="center">
