--- a/src/interface/templates/legalUser/design/modal/publish_modal.html
+++ b/src/interface/templates/legalUser/design/modal/publish_modal.html
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="control-group">
-                            <button type="button" class="btn btn-primary" data-dismiss="modal">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal" id="confirm_btn">
                                 完成
                             </button>
                         </div>
@@ -89,6 +89,9 @@
         url_field.val(questionnaire_url); 
         $('#qrcode').qrcode(questionnaire_url);
 
+        $("#confirm_btn").click(function () {
+            loadContentOfItem('#dashboard-item', {anim: false, scroll: false});
+        })
 
 
     });
