--- a/src/interface/templates/legalUser/design/questions/multi.html
+++ b/src/interface/templates/legalUser/design/questions/multi.html
@@ -3,6 +3,8 @@
 {% block title%}
 
 	<label for="name" id="multi_title">请在此输入问题标题</label>
+    <label id = "must_qst" style="color:red; display: none;">&nbsp;*</label>
+    <label id = "select_hint"></label>
     <div id="checkbox-list">
         <div class="checkbox">
             &emsp;
@@ -28,12 +30,35 @@
             if('{{questions_title}}' != 'None')
                 source_panel_body.find("#multi_title").html('{{questions_title}}');
 
+            //必答题星号
+            if('{{qst_must}}' == 'true')
+                source_panel_body.find("#must_qst").css("display", '');
+
+            //设置选择提示
+            var select_hint = source_panel_body.find("#select_hint");
+            if('{{min_selected}}' == '') {
+                if('{{max_selected}}' != '')
+                    select_hint.html("&nbsp;[最多选择" + '{{max_selected}}' + "项]");
+            }
+            else {
+                if('{{max_selected}}' != '')
+                    select_hint.html("&nbsp;[请选择" + '{{min_selected}}' + " - " + '{{max_selected}}' + "项]");
+                else
+                    select_hint.html("&nbsp;[至少选择" + '{{min_selected}}' + "项]")
+            }
+
             if('{{option}}' != 'None')
             {
                 //全删除
                 source_panel_body.find(".checkbox").each(function() {
                     $(this).remove();
                 });
+
+                //加载人数限制
+                var statistics = new Array();
+                '{% for opt in statistics %}'
+                    statistics['{{forloop.counter}}'] = '{{opt.max}}';
+                '{% endfor %}'
                 
                 var option_name = 'option' + '{{ questions_id }}';
                 var prefix = '<div class="checkbox">\
@@ -45,8 +70,14 @@
                     var option_field = '{{option}}'.split('###')[(i - 1) * 2 + 1];
                     var radio_id = "optionsCheckbox" + i;
                     var radio_value = "option" + i;
+
+                    var option_maxium = statistics[i];
+                    if (option_maxium != '') {
+                        option_maxium = "【 剩余可选择次数: " + option_maxium + ' / ' + option_maxium + ' 】';
+                    }
                     var to_append = prefix + radio_id + ' value=' + radio_value + '>\
-                                        <label for="this.prev();">' + option_field + '</label\
+                                        <label for="this.prev();">' + option_field + '</label>\
+                                        <label for="this.prev();">' + option_maxium + '</label>\
                                         </lable>\
                                     </div>';
                     source_panel_body.find("#checkbox-list").append(to_append);
