--- a/src/interface/templates/legalUser/statistics/paticipants/paticipants_list.html
+++ b/src/interface/templates/legalUser/statistics/paticipants/paticipants_list.html
@@ -6,7 +6,8 @@
     url: "{% url 'statistics/participants' act_id %}",
     sort_by: "id",
     sort_order: "asc",
-    search_field: "id"
+    search_field: "id",
+    table_id: "paticipants_table"
 {% endblock defaults %}
 
 {% block head %}
