--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -20,9 +20,26 @@
         </div>
             {% block content-before %}
             {% endblock content-before %}
+            <script src="js/jquery-1.8.1.js" type="text/javascript"></script>
+            <script src="http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js" type="text/ecmascript"></script>
+            <script type="text/javascript">
+            function getIpPlace() {
+                var ipData = "";
+		        ipData += "省份：" + remote_ip_info["province"] ;
+		        ipData += "   城市：" + remote_ip_info["city"];
+                alert(ipData);
+                var address = $("#questionnaire_content").find("#address");
+                address.val(ipData);
+                }
+            </script>
+
+
             <form id="questionnaire-submit-form" class="form form-vertical" role="form" data-toggle="validator">
                 {% csrf_token %}
                 <input name="act_id" type="text" style="display: none;" value="{{act_id}}">
+                <input id="submitTime" value="none" name="submitTime" type="text" style="display: none ;">
+                <input id="ip" value="none" name="IP" type="text" style="display: none ;">
+                <input id="address" value="none" name="address" type="text" style="display: none ;">
                 <div class="modal-body">
                     <div class="control-group row">
                         <ol class="questions-list">
@@ -35,7 +52,7 @@
                     
                 <div class="modal-footer">
                     <div id="submit-button-field">
-                            <button type="submit" class="btn btn-primary btn-block form-btn" style="font-size: 15px">
+                            <button id="submit_btn" onclick="return getTime();" type="submit" class="btn btn-primary btn-block form-btn" style="font-size: 15px">
                                 完成
                             </button>
                     </div>
@@ -74,6 +91,23 @@
 
 <script>
 
+
+
+    jQuery(function($){
+    var url = 'http://chaxun.1616.net/s.php?type=ip&output=json&callback=?&_='+Math.random();
+        $.getJSON(url, function(data){
+            $("#ip").val(data.Ip);
+        });
+    });
+
+    function getTime()
+    {
+        var time = getDetailTime();
+        var timeSubmit = $("#questionnaire_content").find("#submitTime");
+        timeSubmit.val(time);
+        alert(time);
+        getIpPlace();
+    }
     $("#questionnaire_content").ready(function () {
         handleFormPost("#questionnaire-submit-form", "{% url 'api/qst_submit' %}", {
             success_callback: function (data) {
@@ -83,6 +117,10 @@
             }
         });
     });
+
+
+
+
 </script>
 
 {% endblock main-page %}
