--- a/src/interface/templates/legalUser/information/user_information_change.ajax.html
+++ b/src/interface/templates/legalUser/information/user_information_change.ajax.html
@@ -109,7 +109,7 @@
             handleFormPost("#info_change_form", "{% url 'api/info_change_act' %}", {
                 success_callback: function (data) {
                     if (data['status'] === 'ok') {
-                        showConfirmModal('成功', '个人信息修改成功',true)
+                        showConfirmModal('提示', '个人信息修改成功', true)
                     }
                 }
             });
