--- a/src/interface/templates/legalUser/statistics/print_table.html
+++ b/src/interface/templates/legalUser/statistics/print_table.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <div class="table-responsive">
     <table class="table table-striped" id="print-table">
         <thead>
@@ -35,8 +37,6 @@
         bootstrap: true,                   // (Boolean), style buttons using bootstrap
         position: "bottom"                 // (top, bottom), position of the caption element relative to table
     });
-
-   // $(export_table).tableExport.bootstrap = ["btn", "btn-suceess", "btn-toolbar", "pull-right"];
 
     
 </script>
